--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,7 +4,7 @@
     Edit
 {% endblock %}
 {% block content %}
-    <div class="col-10 col-md-12 col-lg-8">
+    <div class="col-12 col-md-12 col-lg-6">
         <div class="card">
             <h5 class="card-header text-center">Edit your letter</h5>
             <div class="card-body">
@@ -12,10 +12,10 @@
                     <form method="POST" action={{ url_for('edit_para')}}>
                         {% for paragraph in paragraphed_letter %}
                         <div class="row">
-                            <div class="col-2 col-md-1 align-self-center">
+                            <div class="col-1 col-md-1 align-self-center paragraph-number-container">
                                <span class="paragraph-number">{{ loop.index }}</span>
                             </div>
-                            <div class="col-9 col-md-9">
+                            <div class="col-11 col-md-9">
                                 <div class="form-group">
                                 <!-- Include the Autosize.js library -->
                                 <script src="https://cdn.jsdelivr.net/npm/autosize@4.0.2/dist/autosize.min.js"></script>
@@ -34,22 +34,17 @@
                                     </div>
                                     <button type="button" class="btn btn-sm btn-primary cancel" onclick="closeForm({{ loop.index }})">Back</button>
                                     <button type="submit" class="btn btn-sm btn-info" id="para-submit-button-{{loop.index}}" onclick="savePara({{loop.index}})">Re-write Now</button>
+                                    <div id="progress-container-{{loop.index}}">
+                                        <p id="action-text-{{loop.index}}">Generating...</p>
+                                        <div id="progress-line-{{loop.index}}" class="progress-bar">
+                                           <div class="progress"></div>
+                                        </div>
+                                     </div> 
                                 </div>
                             </div>
-                            <div class="col-md-2 self-align-center">
+                            <div class="col-12 col-md-2 self-align-center my-button">
                                <button type="button" class="btn btn-sm btn-outline-success open-button my-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Edit</button>
-                               <style>
-                                  .my-button {
-                                  width: 70px;
-                                  }
-                               </style>
-                               <span id="tag-{{loop.index}}">Modified</span>
-                               <div id="progress-container-{{loop.index}}">
-                                  <p id="action-text-{{loop.index}}">Generating...</p>
-                                  <div id="progress-line-{{loop.index}}" class="progress-bar">
-                                     <div class="progress"></div>
-                                  </div>
-                               </div>
+                               <span class="badge rounded-pill text-bg-info" id="tag-{{loop.index}}">Modified</span>
                             </div>
                          </div>
                          <hr>
