--- a/templates/finalise.html
+++ b/templates/finalise.html
@@ -11,7 +11,7 @@
                 <form method="POST" action={{url_for('finalise')}}>
                     <textarea id="finalLetter" type="hidden" name="letter" rows="25" class="form-control" onchange="updateValue()">{{letter}}</textarea>
                     {% if modified %}
-                        <span id="modified-tag">Modified</span>
+                        <span class="badge rounded-pill text-bg-info" id="modified-tag">Modified</span>
                     {% endif %}
                     <br><br>
                     <button type="button" class="btn btn-primary open-button" id="open-button" onclick="openForm()">Re-write Paragraph</button>
