--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="col-12 col-md-12 col-lg-6">
         <div class="card">
-            <h5 class="card-header text-center">Edit your letter</h5>
+            <h5 class="card-header text-center">Add Ideas</h5>
             <div class="card-body">
                 <div class="container-md">
                     <form method="POST" action={{ url_for('edit_para')}}>
@@ -28,7 +28,7 @@
                                 </script>
                                 </div>
                                 <div class="form-container" id="myForm-{{ loop.index }}">
-                                    <div>Describe how to re-write</div>
+                                    <div>Add any additional ideas ...</div>
                                     <div class="input-group input-group-sm">
                                         <input type="text" class="form-control" placeholder="eg. Make this funny" name="instruction_{{ loop.index }}">        
                                     </div>
