--- a/templates/finalise.html
+++ b/templates/finalise.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="col-12 col-sm-12 col-md-12 col-lg-8">
         <div class="card">
-            <h5 class="card-header text-center">Finalise your letter</h5>
+            <h5 class="card-header text-center">Here you go ...</h5>
             <div class="card-body">
                 <form method="POST" action={{url_for('finalise')}}>
                     <textarea id="finalLetter" type="hidden" name="letter" rows="25" class="form-control" onchange="updateValue()">{{letter}}</textarea>
