--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="col-md-12 col-lg-8">
         <div class="card">
-            <h5 class="card-header text-center">Write 150 words in 10 seconds</h5>
+            <h5 class="card-header text-center">Write Anything in 10 Seconds</h5>
             <div class="card-body">
                 <div class="container-md">
                     <div class="row">
