--- a/static/css/my_styles.css
+++ b/static/css/my_styles.css
@@ -1,4 +1,4 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+body {font-family: Poppins, Arial, Helvetica, sans-serif;}
 .card { 
   margin-top: 2rem;
 }
@@ -135,10 +135,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
   padding: 0px !important;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   body {
     margin: 0px;
-    background-color: blues;
+    background-color: blue;
   }
   .container-md {
     margin: 0px;
