Change the font

--- a/templates/finalise.html
+++ b/templates/finalise.html
@@ -4,7 +4,7 @@
     Finalise
 {% endblock %}
 {% block content %}
-    <div class="col-12 col-sm-12 col-md-12 col-lg-8">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card">
             <h5 class="card-header text-center">Here you go ...</h5>
             <div class="card-body">
@@ -17,7 +17,7 @@
                     <div>
                         <a href='/edit_para' type="button" class="btn btn-sm btn-danger open-button">Back</a>
                     </div>
-                    <button type="button" class="btn btn-primary open-button" id="open-button" onclick="openForm()">Re-write Paragraph</button>
+                    <button type="button" class="btn btn-primary open-button" id="open-button" onclick="openForm()">Re-write</button>
                     <div class="form-container" id="letterForm">
                         <div>Describe how to re-write.</div>
                         <div class="input-group input-group-sm">
