--- a/static/css/my_styles.css
+++ b/static/css/my_styles.css
@@ -150,9 +150,11 @@ color: #ffffff;
     width: 100%;
   }
 }
-/* 
-@media (max-width: 768px) {
-  .examples {
-    width: 100% !important;
+
+@media (min-width: 768px) {
+  .container-md {
+    margin: 0px;
+    max-width: 100% !important;
+    width: 100%;
   }
-} */
+}
