--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -6,16 +6,16 @@
 {% block content %}
     <div class="col-md-12 col-lg-8">
         <div class="card">
-            <h5 class="card-header text-center">Write Anything in 10 Seconds</h5>
+            <h5 class="card-header text-center">Write Anything</h5>
             <div class="card-body">
                 <div class="container-md">
                     <div class="row">
                         <div class="col-12 col-md-12 examples">
                             <p class="h4 text-muted">Examples</p>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Write Jennifer a romantic letter</li>
-                                <li class="list-group-item">Ask Joe to return your underwear in a funny tone</li>
-                                <li class="list-group-item">Write a speech at a wedding</li>
+                                <li class="list-group-item">Write a cover letter to be a waiter</li>
+                                <li class="list-group-item">Write an article about how to become wealthy</li>
+                                <li class="list-group-item">Write a blog about cheapest places to travel</li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-12">
