--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -6,24 +6,25 @@
 {% block content %}
     <div class="col-md-12 col-lg-8">
         <div class="card">
-            <h5 class="card-header text-center">Write Anything</h5>
+            <h5 class="card-header text-center">www.wrytenow.com</h5>
             <div class="card-body">
                 <div class="container-md">
                     <div class="row">
-                        <div class="col-12 col-md-12 examples">
+                        <!--<div class="col-12 col-md-12 examples">
                             <p class="h4 text-muted">Examples</p>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Write a cover letter to be a waiter</li>
                                 <li class="list-group-item">Write an article about how to become wealthy</li>
                                 <li class="list-group-item">Write a blog about cheapest places to travel</li>
                             </ul>
-                        </div>
+                        </div>-->
                         <div class="col-12 col-md-12">
                             <form method="POST" action="{{ url_for('parameters') }}">
+                                <br>
                                 <div class="form-floating">
                                     <textarea rows="4" class="form-control" id="instruction" name="instruction" style="resize: none; overflow: hidden;"></textarea>
-                                    <label for="instruction">Write something amazing... </label>
-                                </div>
+                                    <label for="instruction">Write anything... </label>
+                                </div><br>
                                 <button id="submit-button" class="btn btn-success open-button open-button" type="submit">Submit</button>
                                 <!-- {% include 'my_button.html' %} -->
                             </form>
