--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -8,25 +8,23 @@
         <div class="card">
             <h5 class="card-header text-center">www.wrytenow.com</h5>
             <div class="card-body">
-                <div class="container-md">
-                    <div class="row">
-                        <!--<div class="col-12 col-md-12 examples">
+                <div class="container-md"><br>
+                    <!--<div class="row">
+                        <div class="col-12 col-md-12 examples">
                             <p class="h4 text-muted">Examples</p>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Write a cover letter to be a waiter</li>
-                                <li class="list-group-item">Write an article about how to become wealthy</li>
-                                <li class="list-group-item">Write a blog about cheapest places to travel</li>
-                            </ul>
-                        </div>-->
+                                <li class="list-group-item">Write Jennifer a romantic letter</li>
+                                <li class="list-group-item">Ask Joe to return your underwear in a funny tone</li>
+                                <li class="list-group-item">Write a speech at a wedding</li>
+                            </ul>-->
+                        </div>
                         <div class="col-12 col-md-12">
                             <form method="POST" action="{{ url_for('parameters') }}">
-                                <br>
                                 <div class="form-floating">
                                     <textarea rows="4" class="form-control" id="instruction" name="instruction" style="resize: none; overflow: hidden;"></textarea>
-                                    <label for="instruction">Write anything... </label>
+                                    <label for="instruction">Write anything</label>
                                 </div><br>
-                                <button id="submit-button" class="btn btn-success open-button open-button" type="submit">Submit</button>
-                                <!-- {% include 'my_button.html' %} -->
+                                <center><button id="submit-button" class="btn btn-success open-button open-button" type="submit">Submit</button></center>                                <!-- {% include 'my_button.html' %} -->
                             </form>
                             <div id="progress-container">
                                 <p id="action-text">Letter Generator at work...</p>
