--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -24,9 +24,7 @@
                                     <textarea rows="4" class="form-control" id="instruction" name="instruction" style="resize: none; overflow: hidden;"></textarea>
                                     <label for="instruction">Write anything</label>
                                 </div><br>
-                                <center><button id="submit-button" class="btn btn-success open-button open-button" type="submit">Submit</button></center>
-                                <center><button id="submit-button" class="btn btn-success open-button open-button" type="submit">Upload Photo</button></center>                                <!-- {% include 'my_button.html' %} -->
-                                <!-- {% include 'my_button.html' %} -->
+                                <center><button id="submit-button" class="btn btn-success open-button open-button" type="submit">Submit</button></center>                                <!-- {% include 'my_button.html' %} -->
                             </form>
                             <div id="progress-container">
                                 <p id="action-text">Letter Generator at work...</p>
