--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -19,13 +19,14 @@
                             </ul>-->
                         </div>
                         <div class="col-12 col-md-12">
-                            <form method="POST" action="{{ url_for('parameters') }}">
+                            <form method="POST" action="{{ url_for('parameters') }}" enctype="multipart/form-data">
                                 <div class="form-floating">
                                     <textarea rows="4" class="form-control" id="instruction" name="instruction" style="resize: none; overflow: hidden;"></textarea>
                                     <label for="instruction">Write anything</label>
                                 </div><br>
                                 <center><button id="letter-submit-button" class="btn btn-success open-button open-button" type="submit">Submit</button></center>                                <!-- {% include 'my_button.html' %} -->
-                                <center><button id="doc-submit-button" class="btn btn-success open-button open-button" formaction={{ url_for('generate_doc') }} type="submit">Brochure</button></center>                                <!-- {% include 'my_button.html' %} -->
+                                <center><button id="doc-submit-button" class="btn btn-success open-button open-button" formaction={{ url_for('generate_doc') }} type="submit" onclick="previewImage()">Brochure</button></center>                                <!-- {% include 'my_button.html' %} -->
+                                <input type="file" name="image_file" id="fileUpload">
                             </form>
                             <div id="progress-container">
                                 <p id="action-text">Letter Generator at work...</p>
@@ -33,13 +34,27 @@
                                     <div class="progress-bar progress-bar-striped" style="width: 10%"></div>
                                 </div>
                             </div>
-
+                            <div id="preview"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script>
+        function previewImage() {
+            var file = document.getElementById('fileUpload').files[0];
+            console.log('the file will be saved');
+            var reader = new FileReader();
+            reader.onloadend = function() {
+                var imgBase64 = reader.result.replace(/^data:image\/(png|jpeg|jpg);base64,/, '');
+                document.getElementById('preview').innerHTML = '<img src="data:image/png;base64,' + imgBase64 + '">';
+                localStorage.setItem('image', imgBase64);
+            }
+            reader.readAsDataURL(file);
+        }
+    </script>
     <script>
         const startButton = document.getElementById("letter-submit-button");
         const docSubmitButton = document.getElementById('doc-submit-button');
