bugFix: Avoid infinite loop due to recursion

--- a/templates/400_bad_request.html
+++ b/templates/400_bad_request.html
@@ -7,7 +7,7 @@
     <div class="card mx-auto" style="width: 18rem;">
       <div class="card-body">
         <h1 class="card-title display-1">400</h1>
-        <p class="card-text">The page you are looking for could not be found.</p>
+        <p class="card-text">The page you are looking for could not be found. {{message}}</p>
         <a href="/" class="btn btn-primary btn-lg btn-block">Home Page</a>
       </div>
     </div>
