--- a/templates/choices.html
+++ b/templates/choices.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Choose an option</h1>
-    <form method="GET" action="{{ url_for('parameters') }}">
+    <form method="GET" action="{{ url_for('letter') }}">
         <button type="submit" name="choice" value="customize">Customize letter</button>
         <button type="submit" name="choice" value="have letter.com write entire letter">Have https://coolexpert.pythonanywhere.com/ write entire letter</button>
     </form>
